--- a/package.json
+++ b/package.json
@@ -3,9 +3,10 @@
   "version": "1.0.0",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js",
-    "dev": "nodemon server.js -e js,html"
+    "test": "jest --verbose",
+    "start": "node app/backend/server.js",
+    "dev": "nodemon -L --watch app --watch test app/backend/server.js -e js,html",
+    "testing": "nodemon -L --watch app --watch test test/sum.test.js -e js,html"
   },
   "keywords": [],
   "author": "",
@@ -18,6 +19,7 @@
     "pino-pretty": "^11.2.2"
   },
   "devDependencies": {
+    "jest": "^29.7.0",
     "nodemon": "^3.1.4"
   }
 }
