--- a/package.json
+++ b/package.json
@@ -6,18 +6,20 @@
     "test": "jest",
     "coverage": "jest --coverage",
     "start": "node server.js",
-    "dev": "nodemon -L server.js -e js,html"
+    "dev": "nodemon --env-file .env -L server.js -e js,html"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "config": "^3.3.12",
     "delay": "^6.0.0",
     "express": "^4.19.2",
     "pino": "^9.3.2",
     "pino-http": "^10.2.0",
-    "pino-pretty": "^11.2.2"
+    "pino-pretty": "^11.2.2",
+    "toml": "^3.0.0"
   },
   "devDependencies": {
     "jest": "^29.7.0",
