--- a/Dockerfile.prod
+++ b/Dockerfile.prod
@@ -2,5 +2,5 @@ FROM node:20.17.0-alpine3.20
 WORKDIR /usr/local/app
 COPY . .
 RUN npm install
-EXPOSE $PORT
-CMD ["npm", "run", "dev"]
+EXPOSE 5000
+CMD ["npm", "run", "start"]
