--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,16 +1,17 @@
 services:
   app:
-    build: .
-    image: hello-world-containerized:latest
+    build:
+      context: .
+      dockerfile: ${DOCKERFILE_NAME}
+    image: hugovela1980/hello-world-containerized:latest
     container_name: hwc-dev-cont
     volumes:
       - ./:/usr/local/app
     working_dir: /usr/local/app
     ports:
-      - "${HOST_PORT}:${PORT}"
+      - "${HOST_PORT}:${CONT_PORT}"
     environment:
-      - NODE_ENV=development
-      - PORT=${PORT}
-      - HOST_PORT=${HOST_PORT:-50}
-      - LOGGING_URL=${LOGGING_URL}
-
+      - NODE_ENV=${NODE_ENV}
+      - CONT_PORT=${CONT_PORT}
+      - HOST_PORT=${HOST_PORT}
+      - WELCOME_MESSAGE=Hello World
